<resources>
    <string name="net_warn_detail_doc">file:///android_asset/doc/default/network_warning.htm</string>
    <string name="qqsync_intro_doc">file:///android_asset/doc/default/qqsync_intro.htm</string>
    <string name="qqsync_privacy_doc">file:///android_asset/doc/default/qqsync_privacy.htm</string>
    <string name="qqsync_agreement_doc">http://weixin.qq.com/cgi-bin/readtemplate?check=false&amp;t=weixin_qqsync_agreement</string>
    <string name="url_agreement">http://weixin.qq.com/agreement</string>
    <string name="mm_tips">tips.xml</string>
    <string name="url_getpassword">http://weixin.qq.com/getpassword?lang=zh_CN</string>
    <string name="play_completed">sound/play_completed.mp3</string>
    <string name="time_limit">sound/time_limit.mp3</string>
    <string name="shake_sound_male">sound/shake_sound_male.mp3</string>
    <string name="shake_nomatch">sound/shake_nomatch.mp3</string>
    <string name="shake_match">sound/shake_match.mp3</string>
    <string name="app_name">微信</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_sending">正在发送...</string>
    <string name="app_set">设置</string>
    <string name="app_back">返回</string>
    <string name="app_cancel">取消</string>
    <string name="app_ok">确定</string>
    <string name="app_save">保存</string>
    <string name="app_continue">继续</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>
    <string name="app_yes">是</string>
    <string name="app_no">否</string>
    <string name="app_down_show_nexttime">下次不提示</string>
    <string name="app_pic">[图片]</string>
    <string name="app_voice">[语音]</string>
    <string name="app_video">[视频]</string>
    <string name="app_waiting">请稍候...</string>
    <string name="media_ejected">储存卡已拔出，微信头像、图片、对讲及视频功能将暂时不可用</string>
    <string name="app_loading_data">正在载入数据...</string>
    <string name="app_empty_string" />
    <string name="app_new">new</string>
    <string name="app_download">下载</string>
    <string name="app_install">安装</string>
    <string name="app_canceling">取消中</string>
    <string name="app_downloading">下载中...</string>
    <string name="app_download_finish">下载完成</string>
    <string name="app_download_update_package">微信更新包下载</string>
    <string name="app_update_package_notify">微信更新包提醒</string>
    <string name="app_recommend_update">有新版本的微信，推荐更新</string>
    <string name="app_default">系统默认</string>
    <string name="app_zh_CN">简体中文</string>
    <string name="app_zh_TW">繁體中文</string>
    <string name="app_en">English</string>
    <string name="app_lang_sys">跟随系统设置</string>
    <string name="official_nick">微信团队</string>
    <string name="app_field_qquin">QQ号：</string>
    <string name="app_field_username">微信号：</string>
    <string name="app_field_weibo">微博号：</string>
    <string name="app_field_voice">对讲</string>
    <string name="app_field_text">文字</string>
    <string name="app_field_smiley">表情</string>
    <string name="app_field_pic">图片</string>
    <string name="app_field_video">视频</string>
    <string name="group_all">全部联系人</string>
    <string name="group_weixin">通讯录</string>
    <string name="group_weibo">微博联系人</string>
    <string name="group_domainmail_suffix">" 同事"</string>
    <string name="group_blacklist">黑名单</string>
    <string name="hardcode_group">多人会话|群聊</string>
    <string name="hardcode_plugin_qqsync_nick">通讯录安全助手</string>
    <string name="hardcode_plugin_qqsync_pyinitial">TXLAQZS</string>
    <string name="hardcode_plugin_qqsync_quanpin">TONGXUNLUANQUANZHUSHOU</string>
    <string name="hardcode_plugin_bottle_nick">漂流瓶</string>
    <string name="hardcode_plugin_bottle_pyinitial">PLP</string>
    <string name="hardcode_plugin_bottle_quanpin">PIAOLIUPING</string>
    <string name="hardcode_plugin_lbs_nick">查看附近的人</string>
    <string name="hardcode_plugin_lbs_pyinitial">CKFJDR</string>
    <string name="hardcode_plugin_lbs_quanpin">CHAKANFUJINDEREN</string>
    <string name="hardcode_plugin_shake_nick">摇一摇</string>
    <string name="hardcode_plugin_shake_pyinitial">YYY</string>
    <string name="hardcode_plugin_shake_quanpin">YAOYIYAO</string>
    <string name="hardcode_plugin_medianote_nick">语音记事本</string>
    <string name="hardcode_plugin_medianote_pyinitial">YYJSB</string>
    <string name="hardcode_plugin_medianote_quanpin">YUYINJISHIBEN</string>
    <string name="hardcode_plugin_qqmail_nick">QQ邮箱提醒</string>
    <string name="hardcode_plugin_fmessage_nick">好友推荐助手</string>
    <string name="hardcode_plugin_tmessage_nick">私信助手</string>
    <string name="hardcode_plugin_qmessage_nick">QQ离线助手</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="report_via_wap">"您当前的网络可能存在问题。
是否将您的网络状况上报服务器？上报的内容不含任何个人隐私"</string>
    <string name="network_doctor">"您当前的无线网络可能存在问题，建议您改用GPRS网络。
是否现在去更改设置？"</string>
    <string name="app_copyright">"腾讯公司 版权所有
Copyright? 1998-2011 Tencent.
All Rights Reserved."</string>
    <string name="fmt_route_phone">已切换为听筒播放模式</string>
    <string name="fmt_route_speaker">已切换为扬声器播放模式</string>
    <string name="fmt_http_err" formatted="false">无法连接到服务器(%d,%d)，请检查您的网络或稍后重试</string>
    <string name="fmt_iap_err">网络连接不可用，请稍候重试</string>
    <string name="fmt_auth_err" formatted="false">登录失败(%d,%d)</string>
    <string name="fmt_reg_err" formatted="false">注册失败(%d,%d)</string>
    <string name="fmt_create_chatroom_err" formatted="false">发起群聊失败(%d,%d)</string>
    <string name="fmt_add_chatroom_member_err" formatted="false">添加群成员失败(%d,%d)</string>
    <string name="fmt_search_err" formatted="false">查找失败(%d,%d)</string>
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_delcontactmsg_confirm">确定删除和%s的聊天记录吗？</string>
    <string name="fmt_delcontactmsg_confirm_bottle">确定删除来自%s的漂流瓶的聊天记录吗？</string>
    <string name="fmt_delcontactmsg_confirm_group">确定删除群的聊天记录吗？</string>
    <string name="fmt_update">更新</string>
    <string name="fmt_update_info" formatted="false">"版本信息：
%s
安装包大小：%s
"</string>
    <string name="fmt_in_blacklist">"%s拒绝加入群聊
"</string>
    <string name="fmt_invalid_username">"%s为无效的用户名
"</string>
    <string name="fmt_send_err_account_disabled">您已经关闭了帐户%s的消息收发</string>
    <string name="fmt_send_err_weibo_disabled">您关闭了微博私信助手，将不能收发私信</string>
    <string name="fmt_send_err_qqoffline_disabled">您关闭了QQ离线消息收取设置，将不能收发QQ离线消息</string>
    <string name="fmt_microblog_tip">%s为微博帐号，只支持单独给其发私信</string>
    <string name="fmt_qqmailhelper_brief" formatted="false">发件人：%s 邮件主题：%s</string>
    <string name="fmt_qqsynchelper_brief_alert">您已经%d天没有备份了</string>
    <string name="fmt_qqsynchelper_brief_new">备份通讯录，保障您的通讯录安全</string>
    <string name="fmt_time_length">%d\"</string>
    <string name="fmt_chatting_title_group">群聊(%d人)</string>
    <string name="fmt_need_verify_multiuser">%s启用了好友验证，您需要向他们发送验证请求，通过后才能与他们创建群聊。是否要发送好友验证请求？</string>
    <string name="fmt_need_verify_singleuser">%s启用了好友验证，您需要向他发送验证请求，通过后才能与他创建群聊。是否要发送好友验证请求？</string>
    <string name="fmt_want_to_be_your_friend">%s想要将您加为好友</string>
    <string name="fmt_say_hello_to_you">附近的%s向您打招呼</string>
    <string name="fmt_shake_say_hello_to_you">摇一摇好友%s向您打招呼</string>
    <string name="fmt_bottle_say_hello_to_you">漂流瓶好友%s向您打招呼</string>
    <string name="fmt_just_reg_micromsg">%s加入了微信</string>
    <string name="fmt_response_to">我回复%s:</string>
    <string name="fmt_send_from">%s:</string>
    <string name="fmt_percent">%s%%</string>
    <string name="fmt_card_to" formatted="false">%s向你推荐了%s</string>
    <string name="fmt_card_from" formatted="false">你向%s推荐了%s</string>
    <string name="update_noupdate">您的微信已是最新版本</string>
    <string name="update_getting_updateinfo">正在获取最新版本信息...</string>
    <string name="update_getting_updatepack">正在下载安装包...</string>
    <string name="update_err_getinfo">"获取版本信息失败，请登录
http:\\\\weixin.qq.com
下载最新版本"</string>
    <string name="update_tip_recommended_down">新版本可用</string>
    <string name="update_tip_critical">你的版本过低，请升级</string>
    <string name="update_now">下载安装</string>
    <string name="update_exit">　退出　</string>
    <string name="update_cancel">　取消　</string>
    <string name="app_err_password">QQ密码错误，请重新输入</string>
    <string name="app_err_nouser">QQ号码错误，请重新输入</string>
    <string name="app_err_mailexsit_title">邮箱地址已被使用</string>
    <string name="app_err_mailexsit_tip">该邮箱地址已被一个微信帐号使用，请尝试更换一个地址</string>
    <string name="app_err_reg_title">注册失败</string>
    <string name="app_err_system_busy_tip">系统繁忙，请稍候重试</string>
    <string name="verify_account_tip">微信帐号仅支持6-20个字母、数字、下划线或减号，以字母开头</string>
    <string name="verify_account_tip_short">帐号仅支持6-20个字母、数字、下划线或减号</string>
    <string name="verify_account_err_start">微信号只能以字母开头</string>
    <string name="verify_account_err_chinese">不能使用汉字作为微信号</string>
    <string name="verify_account_err_space">不能使用空格作为微信号</string>
    <string name="verify_account_err_other">不能使用 %s 作为微信号</string>
    <string name="verify_account_null_tip">名字不能为空，请重新输入</string>
    <string name="verify_input_null_tip">输入不能为空，请重新输入</string>
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>
    <string name="verify_username_null_tip">微信帐号不能为空，请输入微信帐号</string>
    <string name="verify_email_null_tip">邮箱不能为空，请输入邮箱</string>
    <string name="verify_password_all_num_tip">密码不能是9位以下的纯数字</string>
    <string name="verify_password_tip">密码必须是6位(含6位)以上的数字和其他字符组合，或者9位(含9位)以上的纯数字</string>
    <string name="verify_seccode_tip">验证码不能为空</string>
    <string name="verify_seccode_fail_tip">验证码错误，请重新输入</string>
    <string name="verify_email_tip">邮箱地址格式不正确，例如：地址里必须包含‘@’、‘.’字符</string>
    <string name="verify_email_err_tip">邮箱地址错误</string>
    <string name="selectattach_image">选择本地图片</string>
    <string name="selectattach_camera">拍照</string>
    <string name="selectsmsapp_none">没有合适的短信应用程序</string>
    <string name="select_login_by_qq_num">直接用QQ号登录</string>
    <string name="reg_type_mobile_text">使用手机号注册</string>
    <string name="reg_type_email_text">使用邮箱帐号注册</string>
    <string name="license_agree">已阅读并同意</string>
    <string name="license_detail">使用条款和隐私政策</string>
    <string name="regbyqq_reg_username_mod_tip">"请填写您要申请的微信号。
支持6～20个字母、数字、下划线和减号，必须以字母开头"</string>
    <string name="regbyqq_reg_username_suggest_tip">这是您的微信帐号，好友可以通过这个帐号名搜索到您</string>
    <string name="reg_reg_account_hint">微信帐号：注册后不可修改</string>
    <string name="regbymail_reg_addr_hint">邮箱地址：请在注册后15天内验证</string>
    <string name="regbymoile_reg_addr_hint">请输入您的手机号码</string>
    <string name="regbymoile_reg_private_tip">您可以用手机号登录微信。并启用手机通讯录匹配，帮您找到通讯录中使用微信的好友。微信不会公开您的手机号给其他用户。</string>
    <string name="regbymail_reg_password_hint">微信密码：请设置登录密码</string>
    <string name="main_title">微信</string>
    <string name="main_contact">通讯录</string>
    <string name="main_addcontact">找朋友</string>
    <string name="main_setting">设置</string>
    <string name="country_normal_code">+86</string>
    <string name="country_normal_name">中国</string>
    <string name="qq_sync_upload">备份</string>
    <string name="qq_sync_upload_hint">上传手机通讯录到云端</string>
    <string name="qq_sync_download">恢复</string>
    <string name="qq_sync_download_hint">下载云端通讯录到手机</string>
    <string name="qq_sync_pwd_safe_tip">了解隐私安全</string>
    <string name="qq_sync_intro">使用说明</string>
    <string name="qq_sync_bottom">通讯录安全助手与QQ同步助手使用相同云端存储</string>
</resources>