<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:gravity="bottom" android:orientation="vertical" android:background="@drawable/btn_style_alert_dialog_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:orientation="vertical" android:id="@+id/popup_layout1" android:paddingTop="6.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
    	<TextView android:textSize="@dimen/TitleTextSize" android:text="@string/select_login_by_qq_num" android:textColor="@color/black" android:gravity="center" android:id="@+id/popup_text1" android:background="@drawable/btn_style_alert_dialog_button" android:layout_width="fill_parent" android:layout_height="45.0dip" />
	</LinearLayout>
	<LinearLayout android:orientation="vertical" android:id="@+id/popup_layout2" android:paddingTop="6.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
    	<TextView android:textSize="@dimen/TitleTextSize" android:text="@string/reg_type_mobile_text" android:textColor="@color/black" android:gravity="center" android:id="@+id/popup_text2" android:background="@drawable/btn_style_alert_dialog_button" android:layout_width="fill_parent" android:layout_height="45.0dip" />
	</LinearLayout>
		<LinearLayout android:orientation="vertical" android:id="@+id/popup_layout3" android:paddingTop="6.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
    	<TextView android:textSize="@dimen/TitleTextSize"  android:text="@string/reg_type_email_text" android:textColor="@color/black" android:gravity="center" android:id="@+id/popup_text3" android:background="@drawable/btn_style_alert_dialog_button" android:layout_width="fill_parent" android:layout_height="45.0dip" />
	</LinearLayout>
	<LinearLayout android:orientation="vertical" android:id="@+id/popup_layout4" android:paddingTop="15.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
   		 <TextView android:textSize="@dimen/TitleTextSize" android:text="@string/app_cancel" android:textColor="@color/white" android:gravity="center" android:id="@+id/popup_text4" android:background="@drawable/btn_style_alert_dialog_cancel" android:layout_width="fill_parent" android:layout_height="45.0dip" />
	</LinearLayout>
</LinearLayout>
